# icrs_robotics_01

./: README.md
icrs_pick_and_place/: CMakeLists.txt  package.xml
icrs_pick_and_place/launch/: teamproject_01.py  teamproject_02.py  teamproject_main.py  teamproject_test.py
icrs_pick_and_place/src/: teamproject_01.cpp  teamproject_02.cpp  teamproject_main.cpp  teamproject_test.cpp
pick_and_place/: CMakeLists.txt  pick_and_place.humble.repos
pick_and_place/launch/: teamproject_01.py
ur_pick_and_place_moveit/launch/: teamproject_02.py  ur_delto_moveit.launch.py
ur_pick_and_place_moveit/src/: teamproject_01.cpp  teamproject_02.cpp
